--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block head_title %}
-    {{ instance.title }}| {{ block.super }}
+    {{ instance.title }} | {{ block.super }}
 {% endblock head_title %}
 
 {% block content %}
 
-    <h1>{{ title }}</h1>
+    <div class="col-sm-12">
+        <h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+        {{ instance.content | linebreaks }}<br/>
+
+    </div>
 
 {% endblock content %}
