--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <h1>{{ title }}</h1>
 
+    <div class="row">
+        {% for obj in object_list %}
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="thumbnail">
+                        {#      <img src="..." alt="...">#}
+                        <div class="caption">
+                            <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
+                                <small>{{ obj.timestamp }}</small>
+                            </h3>
+                            <p>{{ obj.content|linebreaks|truncatechars:240 }}</p>
+                            <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+                        </div>
+                    </div>
+                </div>
+                <hr/>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock content %}
