--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load urlify %}
 
 {% block head_title %}
     {{ instance.title }} | {{ block.super }}
@@ -14,13 +15,12 @@
             <small>{{ instance.timestamp }}</small>
         </h1>
 
-        {{ share_string }}
 
         <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
             Facebook
         </a>
 
-        <a href="https://twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">
+        <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">
             Twitter
         </a>
 
