--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -15,6 +15,7 @@
                             <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
                                 <small>{{ obj.timestamp }}</small>
                             </h3>
+                            {% if obj.user.get_full_name %}<p>Author: {{obj.user.get_full_name }}</p>{% endif %}
                             <p>{{ obj.content|linebreaks|truncatechars:240 }}</p>
                             <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                         </div>
