--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -19,24 +19,21 @@
         {% endif %}
 
 
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
-            Facebook
-        </a>
+        <p>
+        <div class="fb-like" data-href="{{ request.build_absolute_url }}" data-layout="standard"
+             data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+        <hr/>
+        </p>
 
-        <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">
-            Twitter
-        </a>
 
-        <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'></a>
-
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&title={{ instance.title }}&summary={{ share_string }}&source={{ request.build_absolute_uri }}">
-            Linkedin
-        </a>
-
-        <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">Share
-            on Reddit</a>
-
-        {{ instance.content | linebreaks }}<br/>
+        <div class="row">
+            <div class="col-sm-12">
+                {{ instance.content | linebreaks }}<br/>
+                <hr/>
+                <br/>
+                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
