--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -9,13 +9,15 @@
                 <div class="col-sm-12">
                     <div class="thumbnail">
                         {% if obj.image %}
-                        <img src="{{ obj.image.url }}" class="img-responsive">
+                            <img src="{{ obj.image.url }}" class="img-responsive">
                         {% endif %}
                         <div class="caption">
+                            {% if  instance.draft %}<h3>Draft</h3>{% endif %}{% if instance.publish > today %}<h3>Future
+                            Post</h3>{% endif %}
                             <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
                                 <small>{{ obj.publish }}</small>
                             </h3>
-                            {% if obj.user.get_full_name %}<p>Author: {{obj.user.get_full_name }}</p>{% endif %}
+                            {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
                             <p>{{ obj.content|linebreaks|truncatechars:240 }}</p>
                             <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                         </div>
