--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -3,6 +3,11 @@
 {% block content %}
     <h1>{{ title }}</h1>
 
+    <form method="GET" action="">
+        <input type="text" name="q" placeholder="Seach posts" value="{{ request.GET.q }}"/>
+        <input type="submit" value="Search"/>
+    </form>
+
     <div class="row">
         {% for obj in object_list %}
             <div class="row">
@@ -30,7 +35,9 @@
         <div class="pagination">
             <span class="step-links">
                 {% if object_list.has_previous %}
-                    <a href="?page={{ object_list.previous_page_number }}">previous</a>
+                    <a href="?page=
+
+                            {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
                 {% endif %}
 
                 <span class="current">
@@ -38,7 +45,8 @@
                 </span>
 
                 {% if object_list.has_next %}
-                    <a href="?page={{ object_list.next_page_number }}">next</a>
+                    <a href="?page=
+                            {{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
                 {% endif %}
             </span>
         </div>
