--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -29,7 +29,8 @@
 
         <div class="row">
             <div class="col-sm-12">
-                {{ instance.content | linebreaks }}<br/>
+
+               <div class="content-markdown"> {{ instance.content }}<br/></div>
                 <hr/>
                 <br/>
                 <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
