--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 
+{% block head_extra %}
+    {{ form.media }}
+{% endblock head_extra %}
+
 {% block content %}
     <div class="col-sm-12">
-    <h1>Form</h1>
+        <h1>Form</h1>
 
-    <form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" class="btn btn-default" value="Create Post">
-    </form>
+        <form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-default" value="Create Post">
+        </form>
     </div>
 {% endblock content %}
