--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<link rel="stylesheet" href="css/base.css"/>
-{% block style %} {% endblock style %}
-{% block head_extra%}{% endblock head_extra %}
+    <link rel="stylesheet" href="css/base.css"/>
+    {% block style %} {% endblock style %}
+    {% block head_extra %}{% endblock head_extra %}
 
 </head>
 <body>
@@ -54,6 +54,9 @@
             var markedContent = marked(content)
             console.log(markedContent)
             $(this).html(markedContent)
+        })
+        $(".content-markdown img").each(function () {
+            $(this).addClass("img-responsive")
         })
     })
 </script>
