Django markdown deux

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,13 +50,11 @@
     $(document).ready(function () {
         $(".content-markdown").each(function () {
             var content = $(this).text()
-            console.log(content)
             var markedContent = marked(content)
-            console.log(markedContent)
             $(this).html(markedContent)
         })
-        $(".content-markdown img").each(function () {
-            $(this).addClass("img-responsive")
+        $(".post-detail-item img").each(function () {
+            $(this).addClass("img-responsive");
         })
     })
 </script>
