--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-sm-12">
 
-               <div class="content-markdown"> {{ instance.content }}<br/></div>
+               <div class="post-detail-item"> {{ instance.get_markdown }}<br/></div>
                 <hr/>
                 <br/>
                 <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
