--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -16,14 +16,14 @@
                         {% if obj.image %}
                             <img src="{{ obj.image.url }}" class="img-responsive">
                         {% endif %}
-                        <div class="caption">
+                        <div class="caption post-detail-item">
                             {% if  instance.draft %}<h3>Draft</h3>{% endif %}{% if instance.publish > today %}<h3>Future
                             Post</h3>{% endif %}
                             <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
                                 <small>{{ obj.publish }}</small>
                             </h3>
                             {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
-                            <p class="content-markdown">{{ obj.content| truncatechars:240 }}</p>
+                            {{ obj.get_markdown }}
                             <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
                         </div>
                     </div>
@@ -36,6 +36,7 @@
             <span class="step-links">
                 {% if object_list.has_previous %}
                     <a href="?page=
+
 
                             {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
                 {% endif %}
