--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_extra %}
     {{ form.media }}
@@ -17,7 +18,7 @@
         <hr/>
 
         <form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
-            {{ form.as_p }}
+            {{ form| crispy }}
             <input type="submit" class="btn btn-default" value="Create Post">
         </form>
     </div>
