--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -3,9 +3,16 @@
 {% block content %}
     <h1>{{ title }}</h1>
 
-    <form method="GET" action="">
-        <input type="text" name="q" placeholder="Seach posts" value="{{ request.GET.q }}"/>
-        <input type="submit" value="Search"/>
+    <form method="GET" action="" class="row">
+        <div class="col-sm-12">
+            <div class="input-group">
+                <input class="form-control" type="text" name="q" placeholder="Search posts"
+                       value="{{ request.GET.q }}"/>
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+            </span>
+            </div>
+        </div>
     </form>
 
     <div class="row">
@@ -36,6 +43,10 @@
             <span class="step-links">
                 {% if object_list.has_previous %}
                     <a href="?page=
+
+
+
+
 
 
                             {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
