--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -33,6 +33,9 @@
                <div class="post-detail-item"> {{ instance.get_markdown }}<br/></div>
                 <hr/>
                 <br/>
+                <div>
+                    {{ instance.comment_set.all }}
+                </div>
                 <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
             </div>
         </div>
