--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}"/>
     {% block style %} {% endblock style %}
     {% block head_extra %}{% endblock head_extra %}
 
