--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -37,16 +37,28 @@
                 <br/>
                 <div>
                     <p class="lead">Comments</p>
-                <form method="POST" action=".">{% csrf_token %}
-                     {{ comment_form | crispy}}
-                    <input type="submit" value="Post comment" class="btn btn-default"/>
-                </form>
+                    <form method="POST" action=".">{% csrf_token %}
+                        {{ comment_form | crispy }}
+                        <input type="submit" value="Post comment" class="btn btn-default"/>
+                    </form>
 
                     <hr/>
                     {% for commment in comments %}
                         <blockquote>
                             <p>{{ comment.content }}</p>
                             <footer>via {{ comment.user }} | {{ commment.timestamp|timesince }} ago</footer>
+                            {% for child_comment in commment.children %}
+                                <blockquote>
+                                    <p>{{ child_comment.content }}</p>
+                                    <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }} ago
+                                    </footer>
+                                </blockquote>
+                            {% endfor %}
+                            <form method="POST" action=".">{% csrf_token %}
+                                {{ comment_form | crispy }}
+                                <input type="hidden" name="parent_id" value="{{ comment.id }}"/>
+                                <input type="submit" value="Reply" class="btn btn-default"/>
+                            </form>
                         </blockquote>
                         <hr/>
                     {% endfor %}
