--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -21,17 +21,14 @@
             <p>Author {{ instance.user.get_full_name }}</p>
         {% endif %}
 
-
         <p>
         <div class="fb-like" data-href="{{ request.build_absolute_url }}" data-layout="standard"
              data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
         <hr/>
         </p>
 
-
         <div class="row">
             <div class="col-sm-12">
-
                 <div class="post-detail-item"> {{ instance.get_markdown }}<br/></div>
                 <hr/>
                 <br/>
@@ -41,24 +38,29 @@
                         {{ comment_form | crispy }}
                         <input type="submit" value="Post comment" class="btn btn-default"/>
                     </form>
-
                     <hr/>
                     {% for commment in comments %}
                         <blockquote>
                             <p>{{ comment.content }}</p>
-                            <footer>via {{ comment.user }} | {{ commment.timestamp|timesince }} ago</footer>
-                            {% for child_comment in commment.children %}
-                                <blockquote>
-                                    <p>{{ child_comment.content }}</p>
-                                    <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }} ago
-                                    </footer>
-                                </blockquote>
-                            {% endfor %}
-                            <form method="POST" action=".">{% csrf_token %}
-                                {{ comment_form | crispy }}
-                                <input type="hidden" name="parent_id" value="{{ comment.id }}"/>
-                                <input type="submit" value="Reply" class="btn btn-default"/>
-                            </form>
+                            <footer>via {{ comment.user }} | {{ commment.timestamp|timesince }} ago |
+                                {% if commment.children.count > 0 %}{{ commment.children.count }} Comment
+                                    {% if comment.children.count > 1 %} s | {% endif %}{% endif %}<a
+                                        class="comment-reply-btn" href="#">Reply</a></footer>
+                            <div class="comment-reply">
+                                {% for child_comment in commment.children %}
+                                    <blockquote>
+                                        <p>{{ child_comment.content }}</p>
+                                        <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }}
+                                            ago
+                                        </footer>
+                                    </blockquote>
+                                {% endfor %}
+                                <form method="POST" action=".">{% csrf_token %}
+                                    {{ comment_form | crispy }}
+                                    <input type="hidden" name="parent_id" value="{{ comment.id }}"/>
+                                    <input type="submit" value="Reply" class="btn btn-default"/>
+                                </form>
+                            </div>
                         </blockquote>
                         <hr/>
                     {% endfor %}
