--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -42,10 +42,12 @@
                     {% for commment in comments %}
                         <blockquote>
                             <p>{{ comment.content }}</p>
-                            <footer>via {{ comment.user }} | {{ commment.timestamp|timesince }} ago |
-                                {% if commment.children.count > 0 %}{{ commment.children.count }} Comment
-                                    {% if comment.children.count > 1 %} s | {% endif %}{% endif %}<a
-                                        class="comment-reply-btn" href="#">Reply</a></footer>
+                            <footer>via {{ comment.user }} | {{ comment.timestamp|timesince }} ago |
+                                {% if comment.children.count > 0 %}{{ comment.children.count }} Comment
+                                    {% if comment.children.count > 1 %}s{% endif %} | {% endif %} <a
+                                        class='comment-reply-btn' href='#'>Reply</a> | <a class=''
+                                        href='{{ comment.get_absolute_url }}'>Thread</a>
+                            </footer>
                             <div class="comment-reply">
                                 {% for child_comment in commment.children %}
                                     <blockquote>
