--- a/templates/comment_thread.html
+++ b/templates/comment_thread.html
@@ -4,29 +4,34 @@
 
 
 {% block head_title %}
-{{ instance.title }} | {{ block.super }}
+    {{ instance.title }} | {{ block.super }}
 {% endblock head_title %}
 
 
 
 {% block content %}
-{{ object }}
+    {{ object }}
 
 
 
-<div class='col-sm-6 col-sm-offset-3'>
+    <div class='col-sm-6 col-sm-offset-3'>
 
-        
-          <p>{{ comment.content }}</p>
-          <footer>via {{ comment.user }} | {{ comment.timestamp|timesince }} ago | {% if comment.children.count > 0 %}{{ comment.children.count }} Comment{% if comment.children.count > 1 %}s{% endif %} {% endif %}</footer>
-          <hr/>
-          <div>
-              {% for child_comment in comment.children %}
+
+        <p>{{ comment.content }}</p>
+        <footer>via {{ comment.user }} | {{ comment.timestamp|timesince }} ago |
+            {% if comment.children.count > 0 %}{{ comment.children.count }} Comment{% if comment.children.count > 1 %}s
+            {% endif %} {% endif %}{% if request.user == comment.user %}
+                <a href="{{ child_comment.get_delet_url }}">Delete</a>{% endif %}</footer>
+        <hr/>
+        <div>
+            {% for child_comment in comment.children %}
                 <blockquote>
-                <p>{{ child_comment.content }}</p>
-                <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }} ago</footer>
+                    <p>{{ child_comment.content }}</p>
+                    <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }} ago |
+                        {% if request.user == child_comment.user %}
+                            <a href="{{ child_comment.get_delet_url }}">Delete</a>{% endif %}</footer>
                 </blockquote>
-             {% endfor %}
+            {% endfor %}
 
             <form method="POST" action="."> {% csrf_token %}
                 {{ form|crispy }}
@@ -35,10 +40,9 @@
             </form>
         </div>
 
-    
 
         <hr/>
-</div>
+    </div>
 
 
 {% endblock content %}
