--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -36,10 +36,14 @@
                 <br/>
                 <div>
                     <p class="lead">Comments</p>
-                    <form method="POST" action=".">{% csrf_token %}
-                        {{ comment_form | crispy }}
-                        <input type="submit" value="Post comment" class="btn btn-default"/>
-                    </form>
+                    {% if request.user.is_authenticated %}
+                        <form method="POST" action=".">{% csrf_token %}
+                            {{ comment_form | crispy }}
+                            <input type="submit" value="Post comment" class="btn btn-default"/>
+                        </form>
+                    {% else %}
+                        <p>You must login to comment</p>
+                    {% endif %}
                     <hr/>
                     {% for commment in comments %}
                         <blockquote>
@@ -59,11 +63,15 @@
                                         </footer>
                                     </blockquote>
                                 {% endfor %}
-                                <form method="POST" action=".">{% csrf_token %}
-                                    {{ comment_form | crispy }}
-                                    <input type="hidden" name="parent_id" value="{{ comment.id }}"/>
-                                    <input type="submit" value="Reply" class="btn btn-default"/>
-                                </form>
+                                {% if request.user.is_authenticated %}
+                                    <form method="POST" action=".">{% csrf_token %}
+                                        {{ comment_form | crispy }}
+                                        <input type="hidden" name="parent_id" value="{{ comment.id }}"/>
+                                        <input type="submit" value="Reply" class="btn btn-default"/>
+                                    </form>
+                                {% else %}
+                                    <p>You must login to comment</p>
+                                {% endif %}
                             </div>
                         </blockquote>
                         <hr/>
