--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,18 @@
 {% include 'messages_display.html' %}
 
 <div class="container">
+    <ol class="breadcrumb">
+        <li><a href="{% url 'posts:list' %}">Home</a></li>
+        {% block post_detail_link %}
+        {% endblock post_detail_link %}
+
+        {% if not request.user.is_authenticated %}
+            <li class="pull-right"><a href="{% url 'register' %}">Register</a></li>
+            <li class="pull-right"><a href="{% url 'login' %}">Login</a></li>
+        {% else %}
+            <li class="pull-right"><a href="{% url 'logout' %}">Logout</a></li>
+        {% endif %}
+    </ol>
     {% block content %}
     {% endblock content %}
 </div>
@@ -84,6 +96,7 @@
         function setTitle(value) {
             $("#preview-title").text(value)
         }
+
         setTitle(titleInput.value)
 
         titleInput.keyup(function () {
@@ -95,8 +108,6 @@
             event.preventDefault();
             $(this).parent().next(".comment-reply").fadeToggle();
         })
-
-
 
 
     })
