--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -7,8 +7,11 @@
     {{ instance.title }} | {{ block.super }}
 {% endblock head_title %}
 
-{% block content %}
+{% block post_detail_link %}
+    <li><a href="{{ instance.get_absolute_url }}">{{ instance.title }}</a></li>
+{% endblock post_detail_link %}
 
+{% block content %}
     <div class="col-sm-12">
         {% if instance.image %}
             <img src="{{ instance.image.url }}" class="img-responsive">
