--- a/templates/comment_thread.html
+++ b/templates/comment_thread.html
@@ -7,21 +7,15 @@
     {{ instance.title }} | {{ block.super }}
 {% endblock head_title %}
 
-
-
 {% block content %}
     {{ object }}
 
-
-
     <div class='col-sm-6 col-sm-offset-3'>
-
-
         <p>{{ comment.content }}</p>
         <footer>via {{ comment.user }} | {{ comment.timestamp|timesince }} ago |
             {% if comment.children.count > 0 %}{{ comment.children.count }} Comment{% if comment.children.count > 1 %}s
-            {% endif %} {% endif %}{% if request.user == comment.user %}
-                <a href="{{ child_comment.get_delet_url }}">Delete</a>{% endif %}</footer>
+            {% endif %} {% endif %} {% if request.user == comment.user %}
+                <a href='{{ comment.get_delete_url }}'>Delete</a> {% endif %}</footer>
         <hr/>
         <div>
             {% for child_comment in comment.children %}
@@ -29,7 +23,7 @@
                     <p>{{ child_comment.content }}</p>
                     <footer>via {{ child_comment.user }} | {{ child_comment.timestamp|timesince }} ago |
                         {% if request.user == child_comment.user %}
-                            <a href="{{ child_comment.get_delet_url }}">Delete</a>{% endif %}</footer>
+                            <a href='{{ child_comment.get_delete_url }}'>Delete</a>{% endif %}</footer>
                 </blockquote>
             {% endfor %}
             {% if request.user.is_authenticated %}
@@ -39,13 +33,9 @@
                     <input type='submit' value='Reply' class='btn btn-default'>
                 </form>
             {% else %}
-                <p>You must login to comment</p>
+                <p>You must login to comment </p>
             {% endif %}
         </div>
-
-
         <hr/>
     </div>
-
-
 {% endblock content %}
